--- a/_posts/2021-posts/2021-12-03-HLLD-Prep.md
+++ b/_posts/2021-posts/2021-12-03-HLLD-Prep.md
@@ -50,6 +50,12 @@ to rerun the flux calculations to get new fiducial fluxes.
 - Ryu & Jones 1995[^rj] has a ton of great MHD shock tubes that would make
   fantastic system tests once MHD is done.
 
+## Useful links
+
+Original HLLD paper: [Miyoshi & Kusano 2005](https://www.sciencedirect.com/science/article/pii/S0021999105001142?via%3Dihub)
+
+Blog post on the HLLD Algorithm: [HLLD Algorithm]({% post_url 2020-posts/2020-10-23-HLLD-Algorithm%})
+
 ### Citations
 
 [^rj]: Ryu, D., Jones, T. W., &#38; Frank, A. (1995). Numerical
