End of week update

--- a/_posts/2022-posts/2022-02-11-Cholla-IO.md
+++ b/_posts/2022-posts/2022-02-11-Cholla-IO.md
@@ -10,22 +10,21 @@ math:       false                      # Does this post contain math?
 #image:      /assets/img/#            # Header image path
 ---
 
-# Cholla Initial Conditions (ICs)
+## Cholla Initial Conditions (ICs)
 
 I modified the `Riemann`, `Constant`, and `Uniform` initial condition functions to
 support MHD. They're tested and appear to be working as expected. There was some
 trickyness since MHD with constrained transport requires an extra grid cell but
 overall it was reasonably smooth, if a bit time consuming.
 
-# Cholla I/O
+## Cholla I/O
 
 I added MHD support for writing out the grid to HDF5 and ASCII files in the 1D,
 2D, and 3D cases. Again, the extra cell that's needed required some tricky
 modifications but Cholla now can setup and save MHD an MHD grid.
 
+## Other
 
-
-# Other
 - Fixed a bug in one of the HLLD double star state tests. It wasn't lenient
   enough and was throwing false negatives
 - Read Farcy et al. 2022 *Radiation-MagnetoHydrodynamics simulations of cosmic
