Add links to guide posts in welcome

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -10,6 +10,8 @@ math        : false                      # Does this post contain math?
 # image       : /assets/img/...            # Header image path
 ---
 
+## Intro
+
 This is my personal website and research blog. Here you will find what I'm
 working on, some information about me, and my CV/resume.
 
@@ -19,3 +21,13 @@ my research you can check out blog posts or look at my [GitHub
 page](https://github.com/bcaddy); specifically the
 [hydro-sandbox](https://github.com/bcaddy/hydro-sandbox) repo where I prototype
 hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
+
+## Useful Guides and pages
+
+- [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
+- [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
+- [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
+- [Git & GitHub Tutorial]({% post_url guides/2022-08-08-git-tutorial %})
+- [Software Testing & Methodologies]({% post_url guides/2022-08-08-software-testing-and-methodology %})
+- [C++17 Structured Bindings Guide]({% post_url guides/2022-08-08-structured-binding %})
+- [VS Code for HPC]({% post_url guides/2022-08-08-vscode-for-hpc %})
