--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -22,11 +22,12 @@ page](https://github.com/bcaddy); specifically the
 [hydro-sandbox](https://github.com/bcaddy/hydro-sandbox) repo where I prototype
 hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
 
-## Useful Guides and pages
+## Useful Guides and Pages
 
 - [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
 - [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
 - [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
+- [IHPCSS 2022 Poster]({% post_url 2022-posts/2022-05-30-IHPCSS-poster %})
 - [Git & GitHub Tutorial]({% post_url guides/2022-08-08-git-tutorial %})
 - [Software Testing & Methodologies]({% post_url guides/2022-08-08-software-testing-and-methodology %})
 - [C++17 Structured Bindings Guide]({% post_url guides/2022-08-08-structured-binding %})
