--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -32,4 +32,4 @@ hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
 - [Software Testing & Methodologies]({% post_url guides/2022-08-08-software-testing-and-methodology %})
 - [C++17 Structured Bindings Guide]({% post_url guides/2022-08-08-structured-binding %})
 - [VS Code for HPC]({% post_url guides/2022-08-08-vscode-for-hpc %})
-- [Arm DDT with GPUs]({% post_url guides/2022-09-08-../../guides/2022-09-08-arm-ddt-with-gpus %})
+- [Arm DDT with GPUs]({% post_url guides/2022-09-08-arm-ddt-with-gpus %})
