Add clang-tidy notes

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -39,3 +39,4 @@ hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
 - [C++17 Structured Bindings Guide]({% post_url guides/2022-08-08-structured-binding %})
 - [VS Code for HPC]({% post_url guides/2022-08-08-vscode-for-hpc %})
 - [Arm DDT with GPUs]({% post_url guides/2022-09-08-arm-ddt-with-gpus %})
+- [Clang-tidy Notes]({% post_url guides/2022-11-17-clang-tidy-notes %})
