Update Welcome to include link to HLLC algorithm

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -31,6 +31,7 @@ hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
 - [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
 - [MHD Test Problems]({% post_url guides/2022-10-17-mhd-test-problems %})
 - [IHPCSS 2022 Poster]({% post_url 2022-posts/2022-05-30-IHPCSS-poster %})
+- [HLLC Algorithm]({% post_url 2020-posts/2020-10-08-HLLC-Algorithm %})
 
 ### Computer Science Topics
 
