Update welcome page

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -1,5 +1,5 @@
 ---
-title       : Welcome                    # Title
+title       : Welcome, README                    # Title
 author      : Robert Caddy               # Author Name
 date        : 2020-08-31 10:58:56 -0400  # Date
 categories  : []                         # Catagories, no more than 2
@@ -18,9 +18,8 @@ working on, some information about me, and my CV/resume.
 If you're interested in my research, contact info, CV/resume, etc please check
 out those pages on the sidebar. If you're interested in a more in depth look at
 my research you can check out blog posts or look at my [GitHub
-page](https://github.com/bcaddy); specifically the
-[hydro-sandbox](https://github.com/bcaddy/hydro-sandbox) repo where I prototype
-hydrodynamics code or at [my fork of Cholla](https://github.com/bcaddy/cholla).
+page](https://github.com/bcaddy); especially
+[my fork of Cholla](https://github.com/bcaddy/cholla).
 
 ## Useful Guides and Pages
 
