refactor: rearrange the welcome post a bit

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -23,16 +23,7 @@ page](https://github.com/bcaddy); especially
 
 ## Useful Guides and Pages
 
-### Science Topic
-
-- [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
-- [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
-- [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
-- [MHD Test Problems]({% post_url guides/2022-10-17-mhd-test-problems %})
-- [IHPCSS 2022 Poster]({% post_url 2022-posts/2022-05-30-IHPCSS-poster %})
-- [HLLC Algorithm]({% post_url 2020-posts/2020-10-08-HLLC-Algorithm %})
-
-### Computer Science Topics
+### Software Engineering Topics
 
 - [Git & GitHub Tutorial]({% post_url guides/2022-08-08-git-tutorial %})
 - [Software Testing & Methodologies]({% post_url guides/2022-08-08-software-testing-and-methodology %})
@@ -40,3 +31,12 @@ page](https://github.com/bcaddy); especially
 - [VS Code for HPC]({% post_url guides/2022-08-08-vscode-for-hpc %})
 - [Arm DDT with GPUs]({% post_url guides/2022-09-08-arm-ddt-with-gpus %})
 - [Clang-tidy Notes]({% post_url guides/2022-11-17-clang-tidy-notes %})
+
+### Science Topics
+
+- [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
+- [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
+- [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
+- [MHD Test Problems]({% post_url guides/2022-10-17-mhd-test-problems %})
+- [IHPCSS 2022 Poster]({% post_url 2022-posts/2022-05-30-IHPCSS-poster %})
+- [HLLC Algorithm]({% post_url 2020-posts/2020-10-08-HLLC-Algorithm %})
