feat: add a page with my OTV videos

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -34,6 +34,7 @@ page](https://github.com/bcaddy); especially
 
 ### Science Topics
 
+- [Orzag-Tang Vortex]({% post_url 2025-posts/2025-03-25-orszag-tang-vortex %})
 - [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
 - [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
 - [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
