feat: add python type hinting post

--- a/_posts/2020-posts/2020-08-31-Welcome.md
+++ b/_posts/2020-posts/2020-08-31-Welcome.md
@@ -31,10 +31,11 @@ page](https://github.com/bcaddy); especially
 - [VS Code for HPC]({% post_url guides/2022-08-08-vscode-for-hpc %})
 - [Arm DDT with GPUs]({% post_url guides/2022-09-08-arm-ddt-with-gpus %})
 - [Clang-tidy Notes]({% post_url guides/2022-11-17-clang-tidy-notes %})
+- [Python Type Hinting]({% post_url guides/2025-04-25-type-hinting-for-princetonpy %})
 
 ### Science Topics
 
-- [Orzag-Tang Vortex]({% post_url 2025-posts/2025-03-25-orszag-tang-vortex %})
+- [Orszag-Tang Vortex]({% post_url 2025-posts/2025-03-25-orszag-tang-vortex %})
 - [HLLD Algorithm]({% post_url guides/2020-10-23-HLLD-Algorithm %})
 - [VL+CT Algorithm]({% post_url guides/2021-01-06-VL+CT-Algorithm %})
 - [MHD Riemann Problems]({% post_url guides/2021-11-19-MHD-Riemann-Problems %})
